5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1596_1016.log
== TEST (2019-04-02 00:02:23) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
total = sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c))
print(round(a,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:03:10) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
total = int(sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)))
print(round(a,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = int(sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:04:14) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
total = math.sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)))
print(round(a,5))
-- ERROR:
File "XXXX", line 4
    total = math.sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)))
                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:04:26) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
total = math.sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c))
print(round(a,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = math.sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:04:54) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
total = math.sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c))
print(round(total,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = math.sqrt(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:05:57) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)
total = math.sqrt(d)
print(round(d,5))
-- ERROR:
File "XXXX", line 5
    total = math.sqrt(d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:06:07) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)
total = sqrt(d)
print(round(d,5))
-- ERROR:
File "XXXX", line 5
    total = sqrt(d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:07:08) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)
print(round(math.sqrt(d,5)))
-- ERROR:
File "XXXX", line 5
    print(round(math.sqrt(d,5)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:10:24) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)
e = pow(d, 1/2)
print(round(e, 5))
-- ERROR:
File "XXXX", line 5
    e = pow(d, 1/2)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:10:38) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)
f = pow(d, 1/2)
print(round(e, 5))
-- ERROR:
File "XXXX", line 5
    f = pow(d, 1/2)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:10:47) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c)
f = float(pow(d, 1/2)
print(round(e, 5))
-- ERROR:
File "XXXX", line 5
    f = float(pow(d, 1/2)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:11:11) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)

print(round(d, 5))
-- ERROR:
File "XXXX", line 6
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:11:24) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d, 5))
-- ERROR:
File "XXXX", line 5
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:11:26) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d, 5))
-- ERROR:
File "XXXX", line 5
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:11:44) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d, 5))
-- ERROR:
File "XXXX", line 5
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:11:47) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d, 5))
-- ERROR:
File "XXXX", line 5
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:11:49) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d, 5))
-- ERROR:
File "XXXX", line 5
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:11:50) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d, 5))
-- ERROR:
File "XXXX", line 5
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:11:55) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d, 5))
-- ERROR:
File "XXXX", line 5
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:13:11) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
e = round(d,5)
print(e)
-- ERROR:
File "XXXX", line 5
    e = round(d,5)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:13:27) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
e = round(d, 5)
print(e)
-- ERROR:
File "XXXX", line 5
    e = round(d, 5)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:13:29) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
e = round(d, 5)
print(e)
-- ERROR:
File "XXXX", line 5
    e = round(d, 5)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:13:30) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
e = round(d, 5)
print(e)
-- ERROR:
File "XXXX", line 5
    e = round(d, 5)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:13:30) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
e = round(d, 5)
print(e)
-- ERROR:
File "XXXX", line 5
    e = round(d, 5)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:13:49) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(e, 5))
-- ERROR:
File "XXXX", line 5
    print(round(e, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:14:07) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d, 5))
-- ERROR:
File "XXXX", line 5
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:14:14) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(d)
-- ERROR:
File "XXXX", line 5
    print(d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:14:22) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)

-- EXECUTION TIME:
0.153968
-- ERROR:
  File "/home/codebench/codes/1596/1016/main.py", line 5
    
                                                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:14:25) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)

-- ERROR:
File "XXXX", line 5
    
                                                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:14:32) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
-- ERROR:
File "XXXX", line 5
    
                                                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:14:44) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow((a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(d)
-- ERROR:
File "XXXX", line 5
    print(d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:15:45) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(d)
-- OUTPUT:
269.2395706429499
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:15:57) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d,5))
-- OUTPUT:
269.23957
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:16:03) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d,5))
-- EXECUTION TIME:
0.124214
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
269.23957
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
2005.47875
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
2385.13169
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:16:10) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = pow(a+b+c/2*(a+b+c/2-a)*(a+b+c/2-b)*(a+b+c/2-c), 1/2)
print(round(d,5))
-- OUTPUT:
269.23957
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:17:51) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+c+c)/2
e = pow(d(d-a)*(d-b)*(d-c)), 1/2
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    e = pow(d(d-a)*(d-b)*(d-c)), 1/2
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:18:08) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+c+c)/2
e = pow(d(d-a)*(d-b)*(d-c)), 1/2)
print(round(e,5))
-- ERROR:
File "XXXX", line 5
    e = pow(d(d-a)*(d-b)*(d-c)), 1/2)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:18:58) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+c+c)/2
e = pow(d(d-a)*(d-b)*(d-c), 1/2)
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    e = pow(d(d-a)*(d-b)*(d-c), 1/2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:19:16) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+c+c)/2
e = float(pow(d(d-a)*(d-b)*(d-c), 1/2))
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    e = float(pow(d(d-a)*(d-b)*(d-c), 1/2))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:20:58) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
e = float(pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = float(pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:20) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
e = (pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = (pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:28) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
e = pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
print(round(e,5))
-- ERROR:
File "XXXX", line 4
    e = pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:31) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
e = pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
print(round(e,5))
-- ERROR:
File "XXXX", line 4
    e = pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:35) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
e = pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2)
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:22:05) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
e = int(pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = int(pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:22:17) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
e = int(pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = int(pow((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c), 1/2))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:28:43) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
e = int((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c)**1/2)
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = int((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c)**1/2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:28:52) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
e = ((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c)**1/2)
print(round(e,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = ((a+c+c)/2((a+c+c)/2-a)*((a+c+c)/2-b)*((a+c+c)/2-c)**1/2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:29:35) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2 
print(round(s,5))
-- OUTPUT:
21.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:31:26) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2
total = (s(s-a)(s-b)(s-c))**1/2
print(round(s,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (s(s-a)(s-b)(s-c))**1/2
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:31:32) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2
total = (s(s-a)(s-b)(s-c))**1/2
print(round(total,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (s(s-a)(s-b)(s-c))**1/2
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:31:47) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2
total = s(s-a)(s-b)(s-c)**1/2
print(round(total,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = s(s-a)(s-b)(s-c)**1/2
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:33:57) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2
s1 = s-a
s2 = s-b
s3 = s-c
s4 = s*s1*s2*s3
s5 = s4**1/2
print(round(s4,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:34:16) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2
s1 = s-a
s2 = s-b
s3 = s-c
s4 = s*s1*s2*s3
s5 = s4**1/2
print(round(s4,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:34:26) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2
s1 = s-a
s2 = s-b
s3 = s-c
s4 = s*s1*s2*s3
s5 = s4**1/2
print(round(s4,5))
-- EXECUTION TIME:
0.164363
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819.09124
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917.1875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:34:32) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2
s1 = s-a
s2 = s-b
s3 = s-c
s4 = s*s1*s2*s3
s5 = s4**1/2
print(round(s4,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:36:50) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2
s1 = s-a
s2 = s-b
s3 = s-c
s4 = s*s1*s2*s3
s5 = s4**1/2
print(round(s5,5))
-- OUTPUT:
2409.54562
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:37:00) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
s = (a+b+c)/2
s1 = s-a
s2 = s-b
s3 = s-c
s4 = s*s1*s2*s3
s5 = s4**1/2
print(round(s5,5))
-- EXECUTION TIME:
0.151418
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
2409.54562
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
180000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
251458.59375
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:42:41) 
-- CODE:
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
s = (a+b+c)/2
s1 = s-a
s2 = s-b
s3 = s-c
s4 = s*s1*s2*s3
s5 = s4**1/2
print(round(s5,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:42:47) 
-- CODE:
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
s = (a+b+c)/2
s1 = s-a
s2 = s-b
s3 = s-c
s4 = s*s1*s2*s3
s5 = s4**1/2
print(round(s5,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:42:50) 
-- CODE:
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
s = (a+b+c)/2
s1 = s-a
s2 = s-b
s3 = s-c
s4 = s*s1*s2*s3
s5 = s4**1/2
print(round(s5,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:47:05) 
-- CODE:
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
d = (a+b+c)/2
e = s-a
f = s-b
g = s-c
h = d*e*f*g
i = h**1/2
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:47:23) 
-- CODE:
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
d = (a+b+c)/2
e = d-a
f = d-b
g = d-c
h = d*e*f*g
i = h**1/2
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:55:45) 
-- CODE:
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
d = (a+b+c)/2
e = d-a
f = d-b
g = d-c
h = d*e*f*g
i = h**(1/2)
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:55:51) 
-- CODE:
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
d = (a+b+c)/2
e = d-a
f = d-b
g = d-c
h = d*e*f*g
i = h**(1/2)
print(round(i,5))
-- EXECUTION TIME:
0.142822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:55:55) 
-- CODE:
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
d = (a+b+c)/2
e = d-a
f = d-b
g = d-c
h = d*e*f*g
i = h**(1/2)
print(round(i,5))
-- EXECUTION TIME:
0.170457
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:56:02) 
-- CODE:
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
d = (a+b+c)/2
e = d-a
f = d-b
g = d-c
h = d*e*f*g
i = h**(1/2)
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:56:21) 
-- CODE:
a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
d = (a+b+c)/2
e = d-a
f = d-b
g = d-c
h = d*e*f*g
i = h**(1/2)
print(round(i,5))
-- EXECUTION TIME:
0.279176
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
